<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#FFFEFE"
    app:cardCornerRadius="5dp"
    android:layout_marginBottom="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/booking_image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/helicopter"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/booking_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/helicopter_rides"
            android:textColor="#181819"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/booking_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/helicopter_text"
            android:textColor="#181819"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/book_now_button"
            android:text="@string/book_now"
            android:textAllCaps="true" />
    </LinearLayout>
</androidx.cardview.widget.CardView>