<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#3594B3"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <com.andremion.floatingnavigationview.FloatingNavigationView
                    android:id="@+id/floating_navigation_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="#2A6477"
                    app:drawMenuBelowFab="true"
                    app:fabSize="mini"
                    app:headerLayout="@layout/navigation_view_header"
                    app:menu="@menu/navigation_view" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="renting in dubai made simple and exciting"
                android:textAllCaps="true"
                android:textColor="#181819"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    app:cardBackgroundColor="#FFFEFE"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:src="@drawable/motor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Motors"
                            android:textColor="#181819"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/motor_text"
                            android:textColor="#181819"
                            android:textSize="16dp"
                            android:textStyle="normal" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/book_now_button"
                            android:text="Book Now"
                            android:textAllCaps="true" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    app:cardBackgroundColor="#FFFEFE"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:src="@drawable/yachts" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Yachts"
                            android:textColor="#181819"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/yachits_text"
                            android:textColor="#181819"
                            android:textSize="16dp"
                            android:textStyle="normal" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/book_now_button"
                            android:text="Book Now"
                            android:textAllCaps="true" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    app:cardBackgroundColor="#FFFEFE"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:src="@drawable/helicopter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Helicopter rides"
                            android:textColor="#181819"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/helicopter_text"
                            android:textColor="#181819"
                            android:textSize="16dp"
                            android:textStyle="normal" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/book_now_button"
                            android:text="Book Now"
                            android:textAllCaps="true" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="Featured deals"
                    android:textAllCaps="true"
                    android:textColor="#181819"
                    android:textSize="25dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_deals_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <com.glide.slider.library.SliderLayout
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:cardBackgroundColor="#FFFEFE"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Newsletter"
                        android:textColor="#181819"
                        android:textSize="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:autofillHints="Subscribe"
                        android:background="@drawable/subscribe_edit_text_style"
                        android:focusable="true"
                        android:hint="Subscribe"
                        android:inputType="textEmailAddress"
                        android:padding="5dp" />


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/subscribe_button_style"
                        android:focusable="true"
                        android:padding="5dp"
                        android:text="SUBSCRIBE"
                        android:textColor="#fff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="© 2020, rentage"
                        android:textColor="#181819"
                        android:textSize="15dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>